--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </label>
                     <div class="sub-content">
-                        <p>Hands on experience in Google Adwords, Google Analytics, Facebook Ads Manager, MailChimp, HubSpot Email Marketing, Shopify Email Marketing, SendinBlue, Donedeal, ReTargeter, RocketFuel, Vineo, Canva, Balsamiq, Hootsuite, Yoast SEO, Moz, SEMRush.</p>
+                        <p>Hands-on experience in Google Adwords, Google Analytics, Facebook Ads Manager, MailChimp, HubSpot Email Marketing, Shopify Email Marketing, SendinBlue, Donedeal, ReTargeter, RocketFuel, Vineo, Canva, Balsamiq, Hootsuite, Yoast SEO, Moz, SEMRush.</p>
                     </div>
                 </div>
             </div>
