--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Aishwarya and I'm a <span class="typing-2"></span></div>
-                    <p>I have an overall 3 years of work experience in the Web Industry. Creative web designer and web developer dedicated to building websites, responsive (GUI), optimizing the performance, usability (UI) and SEO. Customised CMS web pages, Site troubleshooting, hosting and maintenance. Designing Social Media posts, Digital Business Strategy, Online Advertising - SEM, Brand positioning, Digital & eCommerce store building. I enjoy working on improving the sales, bringing value to the company, providing web solutions and business strategies to clients. I am passionate and keen to learn more about digital trends and emerging web technologies.</p>
-                    <a href="https://drive.google.com/file/d/1_19PNkzu5shaHo1NtrkzqpakZ_ZWDawO/view?usp=sharing" download>View My CV</a>
+                    <p>I have an overall 5+ years of work experience in the Web Industry. Creative web designer and web developer dedicated to building websites, responsive (GUI), optimizing the performance, usability (UI) and SEO. Customised CMS web pages, Site troubleshooting, hosting and maintenance. Designing Social Media posts, Digital Business Strategy, Online Advertising - SEM, Brand positioning, Digital & eCommerce store building. I enjoy working on improving the sales, bringing value to the company, providing web solutions and business strategies to clients. I am passionate and keen to learn more about digital trends and emerging web technologies.</p>
+                    <a href="https://drive.google.com/file/d/1kLwarA4pYEeuioZVii3u2kJumauwDBOj/view?usp=sharing" download>View My CV</a>
                 </div>
             </div>
         </div>
@@ -140,6 +140,17 @@
                         <i class="fas fa-funnel-dollar"></i>
                         <div class="text">Web Developer & Ecommerce Marketing Analyst<br> - 3 Months(Full-time)</div>
                         <p>Infababy | Baby Gear<br>05/2021 - 08/2021, Dublin, Ireland</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="max-width experience_section" id="experience">
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-file-code"></i>
+                        <div class="text">Web Designer & Web Developer<br> - Full-time</div>
+                        <p>Rightstyle Furniture WFRL<br>10/2021 - 08/2023, Dublin, Ireland</p>
                     </div>
                 </div>
             </div>
@@ -270,18 +281,51 @@
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </label>
                     <div class="sub-content">
-                        <p>Hands-on experience in Google Adwords, Google Analytics, Facebook Ads Manager, MailChimp, HubSpot Email Marketing, Shopify Email Marketing, SendinBlue, Donedeal, ReTargeter, RocketFuel, Vineo, Canva, Balsamiq, Hootsuite, Yoast SEO, Moz, SEMRush.</p>
+                        <p>Hands on experience in Google Adwords, Google Analytics, Facebook Ads Manager, MailChimp, HubSpot Email Marketing, Shopify Email Marketing, SendinBlue, Donedeal, ReTargeter, RocketFuel, Vineo, Canva, Balsamiq, Hootsuite, Yoast SEO, Moz, SEMRush.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
-    <!-- Latest Works section start -->
+ <!-- My Latest Works section start -->
     <section class="teams" id="works">
         <div class="max-width">
             <h2 class="title">My Latest Works</h2>
+            <div class="carousel owl-carousel">
+                <a href="https://www.rightstyle.ie/" target="_blank" style="color: #fff">
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/PrestonHouse.png" alt="">
+                            <div class="text">Rightstyle Furniture</div>
+                            <p>Created for Rightstyle Furniture WFRL<br>Dublin, Ireland.<br>www.rightstyle.ie</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://www.storagebeds.ie/" target="_blank" style="color: #fff">
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/eConcepts.png" alt="">
+                            <div class="text">The Smart Storage Beds</div>
+                            <p>Created for The Smart Storage Bed Company<br>Dublin, Ireland.<br>www.storagebeds.ie</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://www.ogelbeds.ie/" target="_blank" style="color: #fff">
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/CodePrompt.png" alt="">
+                            <div class="text">Ogel Kids Beds</div>
+                            <p>Created for Ogel Kids Beds<br>Dublin, Ireland.<br>www.ogelbeds.ie</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+ <!-- My Previous Works section start -->
+    <section class="teams" id="works">
+        <div class="max-width">
+            <h2 class="title">My Previous Works</h2>
             <div class="carousel owl-carousel">
                 <a href="https://www.prestonhouse.ie/" target="_blank" style="color: #fff">
                     <div class="card">
@@ -310,7 +354,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://momentphotography.org/" target="_blank" style="color: #fff">
+                <a href="https://moments.ie/" target="_blank" style="color: #fff">
                     <div class="card">
                         <div class="box">
                             <img src="images/Moments.png" alt="">
@@ -386,6 +430,36 @@
         </div>
     </section>
 
+    <div class="gallery_con">
+        <div class="heading">
+            <h3>Design<span></span>Gallery</h3>
+        </div>
+        <div class="big">
+            <img src="images/works/work1.png">
+            <img src="images/works/work2.png">
+            <img src="images/works/work3.png">
+            <img src="images/works/work4.png">
+            <img src="images/works/work5.png">
+            <img src="images/works/work6.png">
+        </div>
+        <div class="big">
+            <img src="images/works/work1.png">
+            <img src="images/works/work2.png">
+            <img src="images/works/work3.png">
+            <img src="images/works/work4.png">
+            <img src="images/works/work5.png">
+            <img src="images/works/work6.png">
+        </div>
+        <div class="big">
+            <img src="images/works/work1.png">
+            <img src="images/works/work2.png">
+            <img src="images/works/work3.png">
+            <img src="images/works/work4.png">
+            <img src="images/works/work5.png">
+            <img src="images/works/work6.png">
+        </div>
+    </div>
+
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
@@ -453,7 +527,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created by Aishwarya Venkatesh | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created by Aishwarya Venkatesh | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
