--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         </div>
     </section>
 
-    <div class="gallery_con">
+    <!-- <div class="gallery_con">
         <div class="heading">
             <h3>Design<span></span>Gallery</h3>
         </div>
@@ -458,7 +458,7 @@
             <img src="images/works/work5.png">
             <img src="images/works/work6.png">
         </div>
-    </div>
+    </div> -->
 
     <!-- contact section start -->
     <section class="contact" id="contact">
