--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
     <div class="scroll-up-btn">
-        <i class="fas fa-angle-up"></i>
+        <i class="fa-solid fa-angle-up"></i>
     </div>
     <nav class="navbar">
         <div class="max-width">
@@ -57,8 +59,14 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Aishwarya and I'm a <span class="typing-2"></span></div>
-                    <p>I have an overall 5+ years of work experience in the Web Industry. Creative web designer and web developer dedicated to building websites, responsive (GUI), optimizing the performance, usability (UI) and SEO. Customised CMS web pages, Site troubleshooting, hosting and maintenance. Designing Social Media posts, Digital Business Strategy, Online Advertising - SEM, Brand positioning, Digital & eCommerce store building. I enjoy working on improving the sales, bringing value to the company, providing web solutions and business strategies to clients. I am passionate and keen to learn more about digital trends and emerging web technologies.</p>
-                    <a href="https://drive.google.com/file/d/1kLwarA4pYEeuioZVii3u2kJumauwDBOj/view?usp=sharing" download>View My CV</a>
+                    <p>I have over 5+ years of work experience in the web industry. I am a web designer and web developer dedicated to building creative
+                        websites that are responsive (GUI), optimizing website performance, focusing on UX/UI usability, and monitoring performance and
+                        KPI's in line with CRO, CRM, and SEO strategies.<br> Expertise in the Shopify platform for building visually appealing and user-friendly
+                        eCommerce online stores. Collaborate with clients and teams to understand marketing requirements, brand positioning in the retail
+                        industry, and optimize conversion rates, traffic acquisition, and sales, including online advertising (SEM).<br> Graphic designing for social
+                        media posts, banners, and logos. I enjoy working on improving sales, bringing value to the company, and providing web solutions and
+                        business strategies to clients. I am passionate and keen to learn more about digital trends, AI and emerging web technologies.</p>
+                    <a href="https://drive.google.com/file/d/1YtUV3oy3xwh_prZCWzl_Av6SoIMz-NI5/view?usp=drive_link" download>View My CV</a>
                 </div>
             </div>
         </div>
@@ -123,7 +131,7 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-file-code"></i>
+                        <i class="fa-solid fa-arrows-spin"></i>
                         <div class="text">Web Developer Intern<br> - 5 Months(Contract)</div>
                         <p>eConcept Web Solutions Ltd.<br>03/2021 - 08/2021, Dublin, Ireland</p>
                     </div>
@@ -146,11 +154,11 @@
         </div>
         <div class="max-width experience_section" id="experience">
             <div class="serv-content">
-                <div class="card">
+                <div class="card rs">
                     <div class="box">
-                        <i class="fas fa-file-code"></i>
+                        <i class="fa-solid fa-ranking-star"></i>
                         <div class="text">Web Designer & Web Developer<br> - Full-time</div>
-                        <p>Rightstyle Furniture WFRL<br>10/2021 - 08/2023, Dublin, Ireland</p>
+                        <p>Rightstyle Furniture WFRL<br>10/2021 - 05/2024, Dublin, Ireland</p>
                     </div>
                 </div>
             </div>
@@ -209,10 +217,10 @@
           <input type="radio" name="tab" id="tab-1" checked>
           <label for="tab-1">
             <span>DESIGNING SKILLS</span>
-            <div class="icon"><i class="fas fa-plus"></i></div>
+            <div class="icon"><i class="fa-solid fa-bars"></i></div>
           </label>
           <div class="content">
-            <p>Adobe Photoshop, Adobe Illustrator, Adobe InDesign, Adobe Spark, Wordpress, Shopify, OpenCart, Weebly, Canva.</p>
+            <p>Adobe Photoshop, Adobe Illustrator, Adobe InDesign, Adobe Dreamweaver, Adobe Spark, Canva, Figma, Sketch, Google Web Designer, Unsplash, GIMP, Weebly, WIX.</p>
           </div>
         </div>
     
@@ -221,7 +229,7 @@
             <input type="radio" name="tab" id="tab-3">
             <label for="tab-3" class="tab-3">
                 <span>DEVELOPMENT SKILLS</span>
-                <div class="icon"><i class="fas fa-plus"></i></div>
+                <div class="icon"><i class="fa-solid fa-bars"></i></div>
             </label>
             <div class="content">
                 <!-- Sub Heading One -->
@@ -229,10 +237,10 @@
                     <input type="checkbox" name="sub-tab" id="tab-4">
                     <label for="tab-4">
                         <span>SKILLS</span>
-                        <div class="icon"><i class="fas fa-plus"></i></div>
+                        <div class="icon"><i class="fa-solid fa-bars"></i></div>
                     </label>
                     <div class="sub-content">
-                        <p>Html5, CSS3, JavaScript, jQuery, Bootstrap, Responsive Design, Ajax, Adobe Dreamweaver, Automation, Testing, Debugging, Web Hosting, SEO, Git.</p>
+                        <p>Html5, CSS3, JavaScript, jQuery, Ajax, Bootstrap, Responsive Design, Automation, Testing, Debugging, Shopify, Web Hosting, Git, WordPress, Squarespace, OpenCart, WooCommerce, Amazon Seller Central.</p>
                     </div>
                 </div>
                 <!-- Sub Heading Two -->
@@ -240,11 +248,12 @@
                     <input type="checkbox" name="sub-tab" id="tab-5">
                     <label for="tab-5">
                         <span>EXPERIENCE WITH TOOLS</span>
-                        <div class="icon"><i class="fas fa-plus"></i></div>
+                        <div class="icon"><i class="fa-solid fa-bars"></i></div>
                     </label>
                     <div class="sub-content">
                         <p><span class="subtext">CODE EDITOR</span><br>Notepad++, Visual Studio, Atom, Brackets.</p>
-                        <p><span class="subtext">PROJECT MANAGEMENT</span><br>Zoho Connect, Trello, Jira, Slack.</p>
+                        <p><span class="subtext">PROJECT MANAGEMENT</span><br>Microsoft Teams, Monday.com, Zoho CRM, Trello, Jira, Slack.</p>
+                        <p><span class="subtext">DOCUMENTATION</span><br>MS Outlook (MS Word, MS Excel, MS Powerpoint), Google Workspace.</p>
                     </div>
                 </div>
             </div>
@@ -255,7 +264,7 @@
             <input type="radio" name="tab" id="tab-6">
             <label for="tab-6" class="tab-6">
                 <span>DIGITAL MARKETING SKILLS</span>
-                <div class="icon"><i class="fas fa-plus"></i></div>
+                <div class="icon"><i class="fa-solid fa-bars"></i></div>
             </label>
             <div class="content">
                 <!-- Sub Heading One -->
@@ -263,7 +272,7 @@
                     <input type="checkbox" name="sub-tab" id="tab-7">
                     <label for="tab-7">
                         <span>SKILLS</span>
-                        <div class="icon"><i class="fas fa-plus"></i></div>
+                        <div class="icon"><i class="fa-solid fa-bars"></i></div>
                     </label>
                     <div class="sub-content">
                         <p>Keyword Analysis, SEO optimization, Online
@@ -278,10 +287,10 @@
                     <input type="checkbox" name="sub-tab" id="tab-8">
                     <label for="tab-8">
                         <span>EXPERIENCE WITH TOOLS</span>
-                        <div class="icon"><i class="fas fa-plus"></i></div>
+                        <div class="icon"><i class="fa-solid fa-bars"></i></div>
                     </label>
                     <div class="sub-content">
-                        <p>Hands on experience in Google Adwords, Google Analytics, Facebook Ads Manager, MailChimp, HubSpot Email Marketing, Shopify Email Marketing, SendinBlue, Donedeal, ReTargeter, RocketFuel, Vineo, Canva, Balsamiq, Hootsuite, Yoast SEO, Moz, SEMRush.</p>
+                        <p>Hands on experience in Google Adwords, Google Analytics, Google DevTools, Meta Business Suite, MailChimp, Klaviyo, HubSpot, Shopify Apps, SendinBlue, Donedeal, ReTargeter, Rocket Fuel, Vimeo, Canva, Balsamiq, Hootsuite, Yoast SEO, Moz, SEMRush, Ahref, ChatGPT, Shopbox AI.</p>
                     </div>
                 </div>
             </div>
@@ -290,32 +299,32 @@
  <!-- My Latest Works section start -->
     <section class="teams" id="works">
         <div class="max-width">
-            <h2 class="title">My Latest Works</h2>
+            <h2 class="title highlight">My Latest Works</h2>
             <div class="carousel owl-carousel">
                 <a href="https://www.rightstyle.ie/" target="_blank" style="color: #fff">
                     <div class="card">
                         <div class="box">
-                            <img src="images/PrestonHouse.png" alt="">
+                            <img src="images/Rightstyle2.jpg" alt="">
                             <div class="text">Rightstyle Furniture</div>
-                            <p>Created for Rightstyle Furniture WFRL<br>Dublin, Ireland.<br>www.rightstyle.ie</p>
+                            <p>Created for Rightstyle Furniture WFRL<br>In 2023, Dublin, Ireland.<br>www.rightstyle.ie</p>
                         </div>
                     </div>
                 </a>
                 <a href="https://www.storagebeds.ie/" target="_blank" style="color: #fff">
                     <div class="card">
                         <div class="box">
-                            <img src="images/eConcepts.png" alt="">
+                            <img src="images/Storagebeds2.jpg" alt="">
                             <div class="text">The Smart Storage Beds</div>
-                            <p>Created for The Smart Storage Bed Company<br>Dublin, Ireland.<br>www.storagebeds.ie</p>
+                            <p>Created for The Smart Storage Bed Company<br>In 2022, Dublin, Ireland.<br>www.storagebeds.ie</p>
                         </div>
                     </div>
                 </a>
                 <a href="https://www.ogelbeds.ie/" target="_blank" style="color: #fff">
                     <div class="card">
                         <div class="box">
-                            <img src="images/CodePrompt.png" alt="">
+                            <img src="images/Ogelbeds1.jpg" alt="">
                             <div class="text">Ogel Kids Beds</div>
-                            <p>Created for Ogel Kids Beds<br>Dublin, Ireland.<br>www.ogelbeds.ie</p>
+                            <p>Created for Ogel Kids Beds<br>In 2022, Dublin, Ireland.<br>www.ogelbeds.ie</p>
                         </div>
                     </div>
                 </a>
@@ -354,39 +363,12 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://moments.ie/" target="_blank" style="color: #fff">
+                <a href="https://soaktech.ie/" target="_blank" style="color: #fff">
                     <div class="card">
                         <div class="box">
-                            <img src="images/Moments.png" alt="">
-                            <div class="text">Moment Photography</div>
-                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.momentphotography.org</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://www.maltingstraining.ie/" target="_blank" style="color: #fff">
-                    <div class="card">
-                        <div class="box">
-                            <img src="images/Maltings.png" alt="">
-                            <div class="text">Maltings</div>
-                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.maltingstraining.ie</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://www.boylesofthurles.ie/" target="_blank" style="color: #fff">
-                    <div class="card">
-                        <div class="box">
-                            <img src="images/BoylesofThurles.png" alt="">
-                            <div class="text">Boyles of Thurles</div>
-                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.boylesofthurles.ie</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://www.donalmccarthytherapy.com/" target="_blank" style="color: #fff">
-                    <div class="card">
-                        <div class="box">
-                            <img src="images/DonalMcCarthy.png" alt="">
-                            <div class="text">Donal McCarthy</div>
-                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.donalmccarthytherapy.ie</p>
+                            <img src="images/Soaktech.png" alt="">
+                            <div class="text">Soaktech</div>
+                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.soaktech.ie</p>
                         </div>
                     </div>
                 </a>
@@ -399,6 +381,15 @@
                         </div>
                     </div>
                 </a>
+                <a href="https://www.maltingstraining.ie/" target="_blank" style="color: #fff">
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/Maltings.png" alt="">
+                            <div class="text">Maltings</div>
+                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.maltingstraining.ie</p>
+                        </div>
+                    </div>
+                </a>
                 <a href="https://www.rkingscompetitions.com/" target="_blank" style="color: #fff">
                     <div class="card">
                         <div class="box">
@@ -408,24 +399,42 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://soaktech.ie/" target="_blank" style="color: #fff">
-                    <div class="card">
-                        <div class="box">
-                            <img src="images/Soaktech.png" alt="">
-                            <div class="text">Soaktech</div>
-                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.soaktech.ie</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://ourmayor.limerick.ie/" target="_blank" style="color: #fff">
+                <a href="https://www.limerick.ie/" target="_blank" style="color: #fff">
                     <div class="card">
                         <div class="box">
                             <img src="images/OurMayorLimerick.png" alt="">
                             <div class="text">Our Mayor Limerick</div>
-                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.ourmayor.limerick.ie</p>
+                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.limerick.ie</p>
                         </div>
                     </div>
                 </a>
+                <a href="https://www.boylesofthurles.ie/" target="_blank" style="color: #fff">
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/BoylesofThurles.png" alt="">
+                            <div class="text">Boyles of Thurles</div>
+                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.boylesofthurles.ie</p>
+                        </div>
+                    </div>
+                </a>
+                <!-- <a href="https://www.donalmccarthytherapy.com/" target="_blank" style="color: #fff">
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/DonalMcCarthy.png" alt="">
+                            <div class="text">Donal McCarthy</div>
+                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.donalmccarthytherapy.ie</p>
+                        </div>
+                    </div>
+                </a> -->
+                <!-- <a href="https://moments.ie/" target="_blank" style="color: #fff">
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/Moments.png" alt="">
+                            <div class="text">Moment Photography</div>
+                            <p>Created for eConcept<br>Dublin, Ireland.<br>www.momentphotography.org</p>
+                        </div>
+                    </div>
+                </a> -->
             </div>
         </div>
     </section>
@@ -490,11 +499,20 @@
                                 <div class="sub-title">aishwarya.venkatesh1234@gmail.com</div>
                             </div>
                         </div>
+                        <div class="row">
+                            <i class="fab fa-linkedin-in"></i>
+                            <div class="info">
+                                <div class="head">Linked In</div>
+                                <div class="sub-title">
+                                    <p><a href="https://www.linkedin.com/in/aishwarya-venkatesh-a72b6b1a9/" target="_blank" style="color: #36a58f">Aishwarya Venkatesh</a></p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- <div class="row lastrow">
                             <i class="fab fa-linkedin-in"></i>
                             <div class="info">
                                 <div class="head">Linked In</div>
-                                <div class="sub-title"><a href="https://www.linkedin.com/in/aishwarya-venkatesh-a72b6b1a9/" target="_blank" style="color: #36a58f">www.linkedin.com/in/aishwarya-venkatesh-a72b6b1a9</a></div>
+                                <div class="sub-title">Aishwarya Venkatesh<a href="https://www.linkedin.com/in/aishwarya-venkatesh-a72b6b1a9/" target="_blank" style="color: #36a58f">www.linkedin.com/in/aishwarya-venkatesh-a72b6b1a9</a></div>
                             </div>
                         </div> -->
                     </div>
