--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+06<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,7 +66,7 @@
                         industry, and optimize conversion rates, traffic acquisition, and sales, including online advertising (SEM).<br> Graphic designing for social
                         media posts, banners, and logos. I enjoy working on improving sales, bringing value to the company, and providing web solutions and
                         business strategies to clients. I am passionate and keen to learn more about digital trends, AI and emerging web technologies.</p>
-                    <a href="https://drive.google.com/file/d/1YtUV3oy3xwh_prZCWzl_Av6SoIMz-NI5/view?usp=drive_link" download>View My CV</a>
+                    <a href="https://drive.google.com/file/d/14IIUPz_F11m76-9BQZA_MLqXSFBMXJct/view?usp=drive_link" download>View My CV</a>
                 </div>
             </div>
         </div>
@@ -496,7 +496,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">aishwarya.venkatesh1234@gmail.com</div>
+                                <div class="sub-title">aishvenk06@gmail.com</div>
                             </div>
                         </div>
                         <div class="row">
