--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         industry, and optimize conversion rates, traffic acquisition, and sales, including online advertising (SEM).<br> Graphic designing for social
                         media posts, banners, and logos. I enjoy working on improving sales, bringing value to the company, and providing web solutions and
                         business strategies to clients. I am passionate and keen to learn more about digital trends, AI and emerging web technologies.</p>
-                    <a href="https://drive.google.com/file/d/14IIUPz_F11m76-9BQZA_MLqXSFBMXJct/view?usp=drive_link" download>View My CV</a>
+                    <a href="https://drive.google.com/file/d/14IIUPz_F11m76-9BQZA_MLqXSFBMXJct/view?usp=sharing" download>View My CV</a>
                 </div>
             </div>
         </div>
